--- a/SOURCES/firefox_developer_edition.desktop
+++ b/SOURCES/firefox_developer_edition.desktop
@@ -1,8 +1,9 @@
 [Desktop Entry]
 Encoding=UTF-8
+Version=1.0
 Name=Firefox Developer Edition
 Exec=/usr/bin/firefox-dev %u
-Icon=/opt/firefox-dev/browser/chrome/icons/default/default128.png
+Icon=firefox-developer-edition
 Terminal=false
 Type=Application
 Categories=Network;WebBrowser;
