--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -30,7 +30,7 @@ jobs:
           tag_name: ${{ github.ref }}
           release_name: ${{ github.ref }}
           body: |
-            Find release notes [here](https://www.mozilla.org/en-US/firefox/88.0beta/releasenotes/).
+            Find release notes from [here].(https://www.mozilla.org/en-US/firefox/89.0beta/releasenotes/).
           draft: false
           prerelease: false
 
